crates/swc_ecma_parser/tests/typescript-errors/type-arguments/input.ts.stderr
error: Unexpected token `;`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/type-arguments/input.ts:1:9
  |
1 | new A<T>;
  |         ^

